--- a/qcom/audio/Kbuild
+++ b/qcom/audio/Kbuild
@@ -1,3 +1,5 @@
+DTC_INCLUDE += $(srctree)/../sm7550-modules/qcom/opensource/audio-kernel/include
+
 ifeq ($(CONFIG_ARCH_KALAMA), y)
 dtbo-y += kalama-audio.dtbo \
                  kalama-audio-cdp.dtbo \
