qcom: Build dtbos inline
Change-Id: I5228fef8a209655ccc4306219062ba301ecfcaf9

--- a/qcom/audio/Kbuild
+++ b/qcom/audio/Kbuild
@@ -1,3 +1,5 @@
+DTC_INCLUDE += $(srctree)/../sm7550-modules/qcom/opensource/audio-kernel/include
+
 #remove useless qcom device tree in moto build
 ifneq ($(CONFIG_MMI_DEVICE_DTBS),y)
 ifeq ($(CONFIG_ARCH_KALAMA), y)
