--- a/parrot-camera.dtsi
+++ b/parrot-camera.dtsi
@@ -1040,6 +1040,9 @@
 		clock-cntl-level = "suspend", "lowsvs", "svs", "svs_l1",
 			"nominal", "turbo";
 		src-clock-name = "camnoc_axi_clk_src";
+		clock-names-option =  "cam_icp_clk";
+		clocks-option = <&camcc CAM_CC_ICP_CLK>;
+		clock-rates-option = <400000000>;
 		control-camnoc-axi-clk;
 		camnoc-bus-width = <32>;
 		camnoc-axi-clk-bw-margin-perc = <20>;
