--- a/trinket-bt-v1.dtsi
+++ b/trinket-bt-v1.dtsi
@@ -14,18 +14,17 @@
     qcom,bt-vdd-pa-config = <3000000 3400000 1 0>;
     qcom,bt-vdd-xtal-config = <1700000 1900000 1 0>;
   };
+};
 
-  slim_msm: slim@A340000  {
-    status =  "ok";
-    ngd@1 {
-      reg = <1>;
-      #address-cells = <1>;
-      #size-cells = <1>;
-      //slimbus child nodes
-      slimbus: btfmslim-driver {
-        compatible = "slim217,221";
-        reg = <1 0>;
-      };
+&slim_qca {
+  status = "ok";
+  ngd@1 {
+    reg = <3>;
+    #address-cells = <1>;
+    #size-cells = <1>;
+    slimbus: btfmslim-driver {
+      compatible = "slim217,221";
+      reg = <1 0>;
     };
   };
 };
