--- a/gpu/khaje-gpu.dts
+++ b/gpu/khaje-gpu.dts
@@ -18,6 +18,6 @@
 	compatible = "qcom,khaje", "qcom,khaje-qrd",
 			"qcom,khaje-atp", "qcom,khaje-idp";
 	qcom,msm-id = <518 0x10000>, <586 0x10000>;
-	qcom,board-id = <0 0>;
+	qcom,board-id = <0 0>, <0 0x500>;
 };
 
