--- a/kalama-camera-sensor-arc-common.dtsi
+++ b/kalama-camera-sensor-arc-common.dtsi
@@ -105,6 +105,20 @@
 		status = "ok";
   };
 
+  /* tele actuator*/
+  actuator_rear_tele: qcom,actuator2{
+		cell-index = <2>;
+		compatible = "qcom,actuator";
+		cci-master = <CCI_MASTER_1>;
+		cam_vaf-supply = <&camera_ldo6>;
+		regulator-names = "cam_vaf";
+		rgltr-cntrl-support;
+		rgltr-min-voltage = <2800000>;
+		rgltr-max-voltage = <2800000>;
+		rgltr-load-current = <147000>;
+		status = "ok";
+  };
+
   /* main s5kgn8 sensor*/
   qcom,cam-sensor0 {
   	cell-index = <0>;
@@ -150,39 +164,40 @@
 
   /* tele s5kjn1 sensor*/
   qcom,cam-sensor2 {
-    cell-index = <2>;
-    compatible = "qcom,cam-sensor";
-    csiphy-sd-index = <1>;
-    sensor-position-roll = <90>;
-    sensor-position-pitch = <0>;
-    sensor-position-yaw = <180>;
+		cell-index = <2>;
+		compatible = "qcom,cam-sensor";
+		csiphy-sd-index = <1>;
+		actuator-src = <&actuator_rear_tele>;
+		sensor-position-roll = <90>;
+		sensor-position-pitch = <0>;
+		sensor-position-yaw = <180>;
 
-    cam_vio-supply = <&L4B>;
-    cam_vdig-supply = <&cam_dvdd_tele>;
-    cam_clk-supply = <&cam_cc_titan_top_gdsc>;
-    cam_vana-supply = <&cam_avdd_tele>;
-    regulator-names = "cam_vio", "cam_vdig", "cam_clk", "cam_vana";
-    rgltr-cntrl-support;
-    rgltr-min-voltage = <1800000 1100000 0 2800000>;
-    rgltr-max-voltage = <1800000 1100000 0 2800000>;
-    rgltr-load-current = <3500 125000 0 95000>;
+		cam_vio-supply = <&L4B>;
+		cam_vdig-supply = <&cam_dvdd_tele>;
+		cam_clk-supply = <&cam_cc_titan_top_gdsc>;
+		cam_vana-supply = <&cam_avdd_tele>;
+		regulator-names = "cam_vio", "cam_vdig", "cam_clk", "cam_vana";
+		rgltr-cntrl-support;
+		rgltr-min-voltage = <1800000 1100000 0 2800000>;
+		rgltr-max-voltage = <1800000 1100000 0 2800000>;
+		rgltr-load-current = <3500 125000 0 95000>;
 
-    gpio-no-mux = <0>;
-    pinctrl-names = "cam_default", "cam_suspend";
-    pinctrl-0 = <&cam_sensor_mclk2_active &cam_sensor_active_rst2>;
-    pinctrl-1 = <&cam_sensor_mclk2_suspend &cam_sensor_suspend_rst2>;
-    gpios = <&tlmm 102 0>, <&tlmm 118 0>;
-    gpio-reset = <1>;
-    gpio-req-tbl-num = <0 1>;
-    gpio-req-tbl-flags = <1 0>;
-    gpio-req-tbl-label = "CAMIF_MCLK2", "CAM_RESET2";
-    cci-master = <CCI_MASTER_1>;
-    clocks = <&camcc CAM_CC_MCLK2_CLK>;
-    clock-names = "cam_clk";
-    clock-cntl-level = "nominal";
-    clock-rates = <24000000>;
-    status = "ok";
-  };
+		gpio-no-mux = <0>;
+		pinctrl-names = "cam_default", "cam_suspend";
+		pinctrl-0 = <&cam_sensor_mclk2_active &cam_sensor_active_rst2>;
+		pinctrl-1 = <&cam_sensor_mclk2_suspend &cam_sensor_suspend_rst2>;
+		gpios = <&tlmm 102 0>, <&tlmm 118 0>;
+		gpio-reset = <1>;
+		gpio-req-tbl-num = <0 1>;
+		gpio-req-tbl-flags = <1 0>;
+		gpio-req-tbl-label = "CAMIF_MCLK2", "CAM_RESET2";
+		cci-master = <CCI_MASTER_1>;
+		clocks = <&camcc CAM_CC_MCLK2_CLK>;
+		clock-names = "cam_clk";
+		clock-cntl-level = "nominal";
+		clock-rates = <24000000>;
+		status = "ok";
+	};
 };
 
 &cam_cci1 {
