eusb2:phy tunning parameters
Change the phy parameters
Per HW tested result

Change-Id: I95a5fc5fd1f741220c7a244b4afd4896f71928e7
Signed-off-by: William Liu <a17671@motorola.com>
Reviewed-on: https://gerrit.mot.com/2765742
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/qcom/crow-eqe-products-common-overlay.dtsi
+++ b/qcom/crow-eqe-products-common-overlay.dtsi
@@ -121,6 +121,18 @@
 &pm7550ba_vib {
         status = "disabled";
 };
+&pm7550ba_eusb2_repeater {
+	qcom,param-override-seq =
+		/* <value reg_offset> */
+		/* Adjust HS trasmit amplitude */
+		/* USB2 crossover */
+		<0xB 0x50
+		/* IUSB2 */
+		 0xB 0x51
+		/* EQU */
+		 0x1 0x56
+		>;
+};
 
 &soc {
         qcom,pmic_glink_log {
