display: Bringup arua nt37707 cli panel
Modify:
Bringup arua nt37707 cli panel

Change-Id: I939cdfdd8cd230aaebcde4d44b154c9e94e92c65
Signed-off-by: daiss1 <daiss1@lenovo.com>
Reviewed-on: https://gerrit.mot.com/2769518
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Guobin Zhang <zhanggb@motorola.com>
Submit-Approved: Jira Key

--- a/display/dsi-panel-mot-csot-nt37707-667-1080x2640-dsc-cmd-common_v0.dtsi
+++ b/display/dsi-panel-mot-csot-nt37707-667-1080x2640-dsc-cmd-common_v0.dtsi
@@ -1019,7 +1019,7 @@ qcom,mdss-dsi-display-timings {
 		qcom,mdss-dsc-novateck-ic;
 	};
 
-	/*timing@7{
+	timing@7{
 		qcom,mdss-dsi-cmd-mode;
 		qcom,mdss-dsi-panel-framerate = <165>;
 		qcom,mdss-dsi-panel-width = <1080>;
@@ -1142,7 +1142,7 @@ qcom,mdss-dsi-display-timings {
 		qcom,mdss-dsc-bit-per-pixel = <8>;
 		qcom,mdss-dsc-block-prediction-enable;
 		qcom,mdss-dsc-novateck-ic;
-	};*/
+	};
 };
 
 };
