--- a/display/kalama-sde-display-arc-common.dtsi
+++ b/display/kalama-sde-display-arc-common.dtsi
@@ -5,6 +5,7 @@
 #include "dsi-panel-mot-csot-nt37705-667-1080x2640-dsc-cmd-common_ly_v1.dtsi"
 #include "dsi-panel-mot-csot-nt37705-1056x1068-dsc-cmd-common-cli_v1.dtsi"
 #include "dsi-panel-mot-csot-nt37707-667-1080x2640-dsc-cmd-common_v0.dtsi"
+#include "dsi-panel-mot-csot-nt37707-1080x1272-dsc-cmd-common-cli_v0.dtsi"
 
 &tlmm {
 	vio_en_m {
@@ -250,7 +251,7 @@
 			qcom,framerate-group-no-duplicated;
 			qcom,framerate-group-120hz-based;
 			//qcom,mdss-dsi-panel-clockrate = <880000000>;
-			qcom,display-topology = <1 1 1>;
+			qcom,display-topology = <2 2 1>;
 			qcom,default-topology-index = <0>;
 			qcom,mdss-dsi-panel-phy-timings = [00 1B 07 06 16 21 07
 							07 07 02 04 00 17 0C];
@@ -259,7 +260,7 @@
 			qcom,framerate-group-no-duplicated;
 			qcom,framerate-group-90hz-based;
 			//qcom,mdss-dsi-panel-clockrate = <880000000>;
-			qcom,display-topology = <1 1 1>;
+			qcom,display-topology = <2 2 1>;
 			qcom,default-topology-index = <0>;
 			qcom,mdss-dsi-panel-phy-timings = [00 1B 07 06 16 21 07
 							07 07 02 04 00 17 0C];
@@ -268,7 +269,7 @@
 			qcom,framerate-group-no-duplicated;
 			qcom,framerate-group-120hz-based;
 			//qcom,mdss-dsi-panel-clockrate = <880000000>;
-			qcom,display-topology = <1 1 1>;
+			qcom,display-topology = <2 2 1>;
 			qcom,default-topology-index = <0>;
 			qcom,mdss-dsi-panel-phy-timings = [00 1B 07 06 16 21 07
 							07 07 02 04 00 17 0C];
@@ -278,7 +279,7 @@
 			qcom,framerate-group-120hz-based;
 			qcom,framerate-group-90hz-based;
 			//qcom,mdss-dsi-panel-clockrate = <880000000>;
-			qcom,display-topology = <1 1 1>;
+			qcom,display-topology = <2 2 1>;
 			qcom,default-topology-index = <0>;
 			qcom,mdss-dsi-panel-phy-timings = [00 1B 07 06 16 21 07
 							07 07 02 04 00 17 0C];
@@ -294,7 +295,7 @@
 		timing@5 { //1 independent
 			qcom,framerate-group-special-idle-1hz;
 			//qcom,mdss-dsi-panel-clockrate = <880000000>;
-			qcom,display-topology = <1 1 1>;
+			qcom,display-topology = <2 2 1>;
 			qcom,default-topology-index = <0>;
 			qcom,mdss-dsi-panel-phy-timings = [00 1B 07 06 16 21 07
 							07 07 02 04 00 17 0C];
@@ -303,19 +304,19 @@
 			qcom,framerate-group-no-duplicated;
 			qcom,framerate-group-120hz-based;
 			//qcom,mdss-dsi-panel-clockrate = <880000000>;
-			qcom,display-topology = <1 1 1>;
+			qcom,display-topology = <2 2 1>;
 			qcom,default-topology-index = <0>;
 			qcom,mdss-dsi-panel-phy-timings = [00 1B 07 06 16 21 07
 							07 07 02 04 00 17 0C];
 		};
-		//timing@7 { //165
-		//	qcom,framerate-group-no-duplicated;
+		timing@7 { //165
+			qcom,framerate-group-no-duplicated;
 			//qcom,mdss-dsi-panel-clockrate = <880000000>;
-		//	qcom,display-topology = <1 1 1>;
-		//	qcom,default-topology-index = <0>;
-		//	qcom,mdss-dsi-panel-phy-timings = [00 24 0A 0A 1A 25 09
-		//					0A 09 02 04 00 1E 0F];
-		//};
+			qcom,display-topology = <2 2 1>;
+			qcom,default-topology-index = <0>;
+			qcom,mdss-dsi-panel-phy-timings = [00 24 0A 0A 1A 25 09
+							0A 09 02 04 00 1E 0F];
+		};
 	};
 };
 
@@ -421,7 +422,48 @@
 		};
 	};
 };
+&mot_csot_nt37707_1080x1272_dsc_cmd_cli_v0 {
+	qcom,dsi-select-sec-clocks = "pll_byte_clk1", "pll_dsi_clk1";
 
+	qcom,panel-supply-entries = <&dsi_panel_pwr_supply>;
+	qcom,panel-sec-supply-entries = <&dsi_panel_pwr_supply_sec>;
+	qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_dcs";
+	qcom,mdss-dsi-sec-bl-pmic-control-type = "bl_ctrl_dcs";
+	qcom,mdss-dsi-bl-min-level = <420>;
+	qcom,mdss-dsi-bl-max-level = <16380>;
+	qcom,mdss-dsi-bl-default-level = <10230>;
+	qcom,mdss-brightness-max-level = <16380>;
+	qcom,platform-sec-reset-gpio = <&tlmm 72 0>;
+	qcom,platform-sec-vio-enable-gpio = <&tlmm 69 0>;
+	qcom,platform-sec-vci-enable-gpio = <&tlmm 12 0>;
+	qcom,platform-sec-vdd-enable-gpio = <&tlmm 70 0>;
+	qcom,mdss-dsi-panel-orientation = "180";
+	qcom,mdss-dsi-panel-status-check-mode = "reg_read";
+	qcom,mdss-dsi-panel-status-command = [06 01 00 01 00 00 01 0a];
+	qcom,mdss-dsi-panel-status-command-state = "dsi_lp_mode";
+	qcom,mdss-dsi-panel-status-value = <0x9c>;
+	qcom,mdss-dsi-panel-status-read-length = <1>;
+	//qcom,esd-check-enabled;
+	qcom,mdss-dsi-bl-inverted-dbv;
+	qcom,mdss-dsi-bl-is-exponent;
+
+	qcom,mdss-dsi-no-panel-on-read-support;
+	qcom,cellid-read-enabled;
+	qcom,mdss-dsi-panel-cellid-read-length = <36>;
+	qcom,mdss-dsi-panel-cellid-offset = <13>;
+	qcom,mdss-dsi-panel-cellid-command = [
+		06 01 00 01 00 00 01 AC];
+
+	qcom,mdss-dsi-display-timings {
+		timing@0{
+		qcom,mdss-dsi-panel-clockrate = <667500000>;
+			qcom,display-topology = <2 2 1>;
+			qcom,default-topology-index = <0>;
+			qcom,mdss-dsi-panel-phy-timings = [00 11 03 04 12 1E 04
+							04 03 02 04 00 0E 09];
+		};
+	};
+};
 &mot_csot_nt37705_1056x1068_dsc_cmd_cli_v1 {
 	qcom,dsi-select-sec-clocks = "pll_byte_clk1", "pll_dsi_clk1";
 
