arm/dts: remove unused pmic
disable pm8010 and  pmr735a
config pmr735d address to 0x5 according to qcom docs
80-62541-100_REV_AA_SM7550_PMIC_Software_User_Guide

Change-Id: I645cea8093750a9155f9a3080e0491b1e8061c98
Signed-off-by: zhaoxp3 <zhaoxp3@motorola.com>
Reviewed-on: https://gerrit.mot.com/2774055
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Wang Wang <wangwang1@lenovo.com>
Submit-Approved: Jira Key

--- a/qcom/crow-eqe-device-common-overlay.dtsi
+++ b/qcom/crow-eqe-device-common-overlay.dtsi
@@ -120,3 +120,52 @@
 		st,xtalkval = <0x0 0x0 0x0>;
 	};
 };
+
+&pm8010_m {
+	status  = "disabled";
+};
+
+&pm8010_n {
+	status  = "disabled";
+};
+
+/* Set SID from 0xa to 0x5 for pmr735d */
+&spmi0_debug_bus {
+	qcom,pm8010-debug@c {
+		status  = "disabled";
+	};
+	qcom,pm8010-debug@d {
+		status  = "disabled";
+	};
+
+	qcom,pmr735d-debug@5 {
+		compatible = "qcom,spmi-pmic";
+		reg = <0x5 SPMI_USID>;
+		#address-cells = <2>;
+		#size-cells = <0>;
+		qcom,can-sleep;
+	};
+
+	qcom,pmr735d-debug@4 {
+		status  = "disabled";
+	};
+
+	qcom,pmr735a-debug@5 {
+		status  = "disabled";
+	};
+};
+
+&pmr735d_k {
+	reg = <0x5 SPMI_USID>;
+};
+&pmr735d_k_tz {
+	interrupts = <0x5 0xa 0x0 IRQ_TYPE_EDGE_BOTH>;
+};
+
+&pmr735a {
+	status  = "disabled";
+};
+
+&pmr735a_temp_alarm {
+	status  = "disabled";
+};
