--- a/crow-camera-sensor-eqe-dvt1.dtsi
+++ b/crow-camera-sensor-eqe-dvt1.dtsi
@@ -28,6 +28,11 @@
     };
 };
 
+&pmxr2230_flash0 {
+    qcom,max-current-ma = <1050>;
+    qcom,duration-ms = <500>;
+};
+
 &soc {
     cam_avdd_main: gpio-regulator@0 {
         compatible = "regulator-fixed";
