--- a/crow-camera-sensor-eqe-common.dtsi
+++ b/crow-camera-sensor-eqe-common.dtsi
@@ -348,6 +348,7 @@
         rgltr-min-voltage = <1800000 2800000 2800000>;
         rgltr-max-voltage = <1800000 2800000 2800000>;
         rgltr-load-current = <15000 130000 200000>;
+        af-ois-use-same-ic;
         status = "ok";
     };
 
