Make devicetree compatible with driver 7.4
driver 7.4 need to declare ss-irq
So Add ss-irq to make device tree compatible

Change-Id: I46b96e354bd9682087b36e0f8e54dc72fa4722a7
Signed-off-by: zhuangnk1 <zhuangnk1@lenovo.com>
Reviewed-on: https://gerrit.mot.com/2780373
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Tao Sun <suntao2@motorola.com>
Submit-Approved: Jira Key

--- a/qcom/kalama-moto-velar-qorvo-uwb.dtsi
+++ b/qcom/kalama-moto-velar-qorvo-uwb.dtsi
@@ -23,6 +23,7 @@
 		reg = <0>;
 		spi-max-frequency = <20000000>;
 		reset-gpios = <&tlmm 173 GPIO_ACTIVE_LOW>;
+		ss-irq-gpios = <&tlmm 89 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>;
 		ss-ready-gpios = <&tlmm 137 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>;
 		wakeup-gpios = <&tlmm 172 GPIO_ACTIVE_HIGH>;
 		csn-gpios = <&tlmm 51 GPIO_ACTIVE_LOW>;
