--- a/qcom/crow-eqe-products-common-overlay.dtsi
+++ b/qcom/crow-eqe-products-common-overlay.dtsi
@@ -24,6 +24,14 @@
         reg = <0x42>;
     };
 };
+&tlmm{
+    haptic_irq {
+        haptic_irq_default: haptic_irq_default {
+            pins = "gpio144";
+            bias-pull-up;
+        };
+    };
+};
 &qupv3_se13_i2c {
   status = "ok";
   haptic_nv@5A{
@@ -33,6 +41,8 @@
 		/* aw8624x_no_reset; */
 		reset-gpio = <&tlmm 20 0>;
 		irq-gpio = <&tlmm 144 0>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&haptic_irq_default>;
 /****************************** aw862x ******************************/
 		aw862x_vib_lk_f0_cali = < 0 >;
 		aw862x_vib_mode = < 2 >; /* mode: RAM -> 2; CONT -> 3 */
