--- a/display/crow-sde-display-eqe-common.dtsi
+++ b/display/crow-sde-display-eqe-common.dtsi
@@ -19,28 +19,31 @@
 			qcom,supply-max-voltage = <1800000>;
 			qcom,supply-enable-load = <200000>;
 			qcom,supply-disable-load = <80>;
-			qcom,supply-post-on-sleep = <0>;
+			qcom,supply-post-on-sleep = <1>;
 		};
 
 		qcom,panel-supply-entry@1 {
 			reg = <1>;
+			qcom,supply-name = "vci";
+			qcom,supply-min-voltage = <3000000>;
+			qcom,supply-max-voltage = <3000000>;
+			qcom,supply-enable-load = <10000>;
+			qcom,supply-disable-load = <0>;
+			qcom,supply-post-on-sleep = <1>;
+			qcom,supply-post-off-sleep = <1>;
+		};
+
+		qcom,panel-supply-entry@2 {
+			reg = <2>;
 			qcom,supply-name = "vdd";
 			qcom,supply-min-voltage = <1200000>;
 			qcom,supply-max-voltage = <1200000>;
 			qcom,supply-enable-load = <299000>;
 			qcom,supply-disable-load = <0>;
 			qcom,supply-post-on-sleep = <0>;
+			qcom,supply-post-off-sleep = <1>;
 		};
 
-		qcom,panel-supply-entry@2 {
-			reg = <2>;
-			qcom,supply-name = "vci";
-			qcom,supply-min-voltage = <3000000>;
-			qcom,supply-max-voltage = <3000000>;
-			qcom,supply-enable-load = <10000>;
-			qcom,supply-disable-load = <0>;
-			qcom,supply-post-on-sleep = <0>;
-		};
 	};
 
 };
