--- a/qcom/crow-eqe-products-common-overlay.dtsi
+++ b/qcom/crow-eqe-products-common-overlay.dtsi
@@ -139,6 +139,8 @@
 		<0xB 0x50
 		/* IUSB2 */
 		 0xB 0x51
+		/* SQUELCH detection threshold */
+		 0x5 0x54
 		/* EQU */
 		 0x1 0x56
 		/*PREEM*/
