arm64/dts:change the socd to 95
Changes,
change the socd to 95

Change-Id: I846bfce68e9d7419580276c726c5c18edea78ecc
Signed-off-by: Lei Chen <chenlei18@lenovo.com>
Reviewed-on: https://gerrit.mot.com/2796100
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Reviewed-by: Wei Xu <xuwei9@lenovo.com>
Reviewed-by: Lei Chen <chenl18@motorola.com>
Submit-Approved: Jira Key

--- a/qcom/crow-eqe-thermal-overlay.dtsi
+++ b/qcom/crow-eqe-thermal-overlay.dtsi
@@ -8,6 +8,10 @@
         };
 };
 
+&socd_trip {
+    temperature = <95>;
+};
+
 &pmk8550_vadc {
 	pm7550_pa2_therm {
 		reg = <PMXR2230_ADC5_GEN3_AMUX_THM5_100K_PU>;
