--- a/qcom/crow.dtsi
+++ b/qcom/crow.dtsi
@@ -408,7 +408,7 @@
 		alloc-ranges = <0x0 0x00000000 0x0 0xffffffff>;
 		reusable;
 		alignment = <0x0 0x400000>;
-		size = <0x0 0xC00000>;
+		size = <0x0 0x2C00000>;
 	};
 
 	adsp_mem_heap: adsp_heap_region {
