arm/dts:adjust the bcl actions for eqe
Changes,
1, Tune the socd trip point to 98
2, Adjust the bcl actions for perf

Change-Id: I7ff76217e7d551bea707db8e77544dbd2602e488
Signed-off-by: Lei Chen <chenlei18@lenovo.com>
Reviewed-on: https://gerrit.mot.com/2797601
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Wei Xu <xuwei9@lenovo.com>
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/qcom/crow-eqe-thermal-overlay.dtsi
+++ b/qcom/crow-eqe-thermal-overlay.dtsi
@@ -9,7 +9,7 @@
 };
 
 &socd_trip {
-    temperature = <95>;
+    temperature = <98>;
 };
 
 &pmk8550_vadc {
@@ -355,4 +355,41 @@
 		};
 	};
 
+	socd {
+		cooling-maps {
+			socd_apc1 {
+				trip = <&socd_trip>;
+				cooling-device = <&APC1_pause 0 0>;
+			};
+			socd_cpu4 {
+				trip = <&socd_trip>;
+				cooling-device = <&CPU4 THERMAL_NO_LIMIT 4>;
+			};
+			socd_cpu7 {
+				trip = <&socd_trip>;
+				cooling-device = <&cpu7_pause 1 1>;
+			};
+
+		};
+	};
+
+	nspss-0 {
+		polling-delay-passive = <1000>;
+	};
+
+	nspss-1 {
+		polling-delay-passive = <1000>;
+	};
+
+	nspss-2 {
+		polling-delay-passive = <1000>;
+	};
+
+	gpuss-0 {
+		polling-delay-passive = <1000>;
+	};
+
+	gpuss-1 {
+		polling-delay-passive = <1000>;
+	};
 };
