--- a/display/crow-sde-display-eqe-common.dtsi
+++ b/display/crow-sde-display-eqe-common.dtsi
@@ -225,6 +225,7 @@
 &qupv3_se0_spi {
     goodix-berlin@0 {
         panel = <&mot_csot_vtdr6126_667_1220x2712_dsc_vid_144hz
+                 &mot_csot_vtdr6126_c_667_1220p_dsc_vid_144hz_v1
                  &mot_csot_vtdr6126_c_667_1220p_dsc_vid_144hz>;
     };
 };
