--- a/display/dsi-panel-mot-csot-vtdr6126-c-667-1220x2712-dsc-video-144hz-common.dtsi
+++ b/display/dsi-panel-mot-csot-vtdr6126-c-667-1220x2712-dsc-video-144hz-common.dtsi
@@ -50,13 +50,15 @@
 		qcom,mdss-dsi-hbm-on-command = [
 				39 00 00 40 00 00 03 51 3E 80
 				39 00 00 00 00 00 02 62 00];
+		qcom,mdss-dsi-hbm-on-command-state = "dsi_hs_mode";
 		qcom,mdss-dsi-hbm-off-command = [
 				39 00 00 00 00 00 02 62 00];
-
+		qcom,mdss-dsi-hbm-off-command-state = "dsi_hs_mode";
 		qcom,mdss-dsi-hbm-fod;
 		qcom,mdss-dsi-hbm-fod-on-command = [
 				39 00 00 40 00 00 05 63 10 00 14 AC
-				39 01 00 00 00 00 02 62 03];
+				39 00 00 00 00 00 02 62 03];
+		qcom,mdss-dsi-hbm-fod-on-command-state = "dsi_hs_mode";
 
 		qcom,mdss-dsi-panel-local-hbm-enabled;
 		qcom,mdss-dsi-panel-local-hbm-DC-HYBIRD-THRESHOLD-BL = <6715>;
@@ -86,6 +88,7 @@
 					39 00 00 00 00 00 03 F0 AA 10
 					39 00 00 00 00 00 18 D0 C4 04 60 14 7A 00 35 4B 19 4F 00 00 4B 30 50 00 00 00 04 44 19 19 19
 					39 00 00 00 00 00 03 BB 01 41
+					39 00 00 00 00 00 03 B9 01 10
 					39 00 00 00 00 00 03 F0 AA 13
 					39 00 00 00 00 00 19 C5 02 8F 02 5D 03 04 02 90 02 5D 03 04 02 91 02 5E 03 04 02 91 02 5E 03 06
 					39 00 00 00 00 00 02 03 01
