arm/dts:aw_sar:update power supply
arm/dts:
aw_sar:
Update power supply.

Change-Id: Ifa32e1f368b31a51b29624d073d9c0684e9bb3f2
Reviewed-on: https://gerrit.mot.com/2803666
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Yuchang Guo <guoyc1@lenovo.com>
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key
Reviewed-by: <yangyi31@motorola.com>

--- a/qcom/crow-eqe-sensors-overlay.dtsi
+++ b/qcom/crow-eqe-sensors-overlay.dtsi
@@ -131,13 +131,13 @@
 		/* common node */
 		compatible = "awinic,aw_sar";
 		reg = < 0x12 >;
-		//aw_sar,regulator-power-supply = <1>;
+		aw_sar,regulator-power-supply = <1>;
 		sar-num = < 0 >;
 		interrupt-parent = < &tlmm >;
 		interrupts = <127 0x02>;
 		interrupt-names = "awinic_irq";
 		irq-gpio = <&tlmm 127 0x02>;
-		//vcc0-supply = <&L12A>;
+		vcc0-supply = <&pm7550_l7>;
 		channel_use_flag = <0x0f>;
 		aw_sar,use_plug_cail;
 		aw_sar,update_fw;
