--- a/crow-camera-sensor-eqe-common.dtsi
+++ b/crow-camera-sensor-eqe-common.dtsi
@@ -106,6 +106,7 @@
         rgltr-min-voltage = <2800000>;
         rgltr-max-voltage = <2800000>;
         rgltr-load-current = <103000>;
+        af-drift-support;
         status = "ok";
     };
 
