arm/dts: i2c add aliases for bus num
i2c add alias
for bus num locked

Change-Id: I2c7af0a5d4691571922abb82c8a316ac20823aa1
Signed-off-by: dengwei1 <dengwei1@motorola.com>
Reviewed-on: https://gerrit.mot.com/2806746
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/qcom/crow-eqe-base.dts
+++ b/qcom/crow-eqe-base.dts
@@ -13,3 +13,11 @@
 /dts-v1/;
 
 #include "crow-moto-common-base.dtsi"
+
+&aliases {
+	i2c0 = &qupv3_se1_i2c;
+	i2c1 = &qupv3_se8_i2c;
+	i2c2 = &qupv3_se13_i2c;
+	i2c3 = &qupv3_se15_i2c;
+};
+
