eqe: add af-drift-support for main ois[1/2]
Details:
fix AF drift settings writing fail

Change-Id: I145ecfde1df4ece03d3f41a8e82bb3051bc145ef
Signed-off-by: shihl5@motorola.com <shihl5@motorola.com>
Reviewed-on: https://gerrit.mot.com/2810272
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Reviewed-by: Wang Liu <liuwang2@lenovo.com>
Tested-by: Jira Key
Reviewed-by: <liuzy55@motorola.com>
Reviewed-by: <liuyy62@motorola.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Submit-Approved: Jira Key

--- a/crow-camera-sensor-eqe-common.dtsi
+++ b/crow-camera-sensor-eqe-common.dtsi
@@ -135,6 +135,7 @@
         rgltr-min-voltage = <1800000 2800000 2800000>;
         rgltr-max-voltage = <1800000 2800000 2800000>;
         rgltr-load-current = <14000 119000 119000>;
+        af-drift-support;
         status = "ok";
     };
 
