--- a/crow-camera-sensor-eqe-dvt1.dtsi
+++ b/crow-camera-sensor-eqe-dvt1.dtsi
@@ -135,6 +135,7 @@
         rgltr-min-voltage = <1800000 2800000 2800000>;
         rgltr-max-voltage = <1800000 2800000 2800000>;
         rgltr-load-current = <14000 119000 119000>;
+        af-drift-support;
         status = "ok";
     };
 
