display: modify L3D to 1.25v as panel ddic spec
modify L3D to 1.25v as panel ddic spec
for macan

Change-Id: I54daf90f9d03dfa55da799b2cc03cd1c5a7d03e8
Signed-off-by: tanhua1 <tanhua1@motorola.com>
Reviewed-on: https://gerrit.mot.com/2830336
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/qcom/crow-eqe-device-common-overlay.dtsi
+++ b/qcom/crow-eqe-device-common-overlay.dtsi
@@ -121,6 +121,12 @@
 	regulator-always-on;
 };
 
+&L3D {
+	regulator-min-microvolt = <1250000>;
+	regulator-max-microvolt = <1250000>;
+	qcom,init-voltage = <1250000>;
+};
+
 &tlmm {
     laser_xsdn_active: laser_xsdn_active {
 		mux {
