Adjust the redriver equ
Per HW team request
Adjust the ps5169 redriver equ to low the
DP gain db

Change-Id: I3de5fdb09fea32964786d0d6690133af2b76cb8f
Signed-off-by: William Liu <a17671@motorola.com>
Reviewed-on: https://gerrit.mot.com/2838342
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/qcom/crow-eqe-products-common-overlay.dtsi
+++ b/qcom/crow-eqe-products-common-overlay.dtsi
@@ -144,6 +144,18 @@
 		/*PREEM*/
 		 0x7 0x57
 		>;
+	qcom,host-param-override-seq =
+		/* <value reg_offset> */
+		/* Adjust HS trasmit amplitude */
+		/* USB2 crossover */
+		<0xB 0x50
+		/* IUSB2 */
+		 0xB 0x51
+		/* EQU */
+		 0x1 0x56
+		/*PREEM*/
+		 0x7 0x57
+		>;
 };
 
 &soc {
