--- a/qcom/crow-eqe-sensors-overlay.dtsi
+++ b/qcom/crow-eqe-sensors-overlay.dtsi
@@ -53,6 +53,7 @@
 		interrupts = <127 0x02>;
 		interrupt-names = "capsense0_irq";
 		Semtech,nirq-gpio= <&tlmm 127 0x02>;
+		esd-reinit-on = <1>;
 		/*use PH4/5/6 as the reference sensor
 		set it to 0xff if the ref-phases-x is not used*/
 		Semtech,ref-phases-a = <4>;
