arm/dts: enable usb therm cooler for sb
Changes,
1,Seperate the japan and row dts
1,enable usb therm cooler for japan
2,config the mosfet toggle GPIO

Change-Id: I36e1086e1a06e5ea42894de0f0da27d72e58c742
Signed-off-by: Lei Chen <chenlei18@lenovo.com>
Reviewed-on: https://gerrit.mot.com/2844152
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Reviewed-by: Wei Xu <xuwei9@lenovo.com>
Submit-Approved: Jira Key

--- a/qcom/Makefile
+++ b/qcom/Makefile
@@ -113,7 +113,8 @@ ifeq ($(CONFIG_EQE_DTB),y)
 CROW_BASE_DTB += crow-eqe-base.dtb
 CROW_BOARDS += crow-eqe-evb1-overlay.dtbo \
                crow-eqe-evt1-overlay.dtbo \
-               crow-eqe-dvt1-overlay.dtbo
+               crow-eqe-dvt1-overlay.dtbo \
+               crow-eqe-evt1-jp-overlay.dtbo
 endif
 
 else
