--- a/crow-camera-sensor-eqe-dvt1.dts
+++ b/crow-camera-sensor-eqe-dvt1.dts
@@ -11,9 +11,10 @@
 #include <dt-bindings/regulator/qcom,rpmh-regulator-levels.h>
 
 #include "crow-camera-sensor-eqe-dvt1.dtsi"
+#define EQE_RADIO_JP 3
 / {
         model = "eqe";
         compatible = "qcom,crow-idp", "qcom,crow", "qcom,idp", "qcom,eqe";
         qcom,msm-id = <608 0x10000>;
-        qcom,board-id = <0x41 0xB100>;
+        qcom,board-id = <0x41 0xB100>,<(EQE_RADIO_JP << 8 | 0x41) 0xB100>;
 };
