arm/dts:add japan evb&dvt board dts
Changes,
Add japan evb and dvt board dts

Change-Id: I62a56bc227d8af722c153c19e54bf36169e45115
Signed-off-by: Lei Chen <chenlei18@lenovo.com>
Reviewed-on: https://gerrit.mot.com/2851991
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Reviewed-by: Lei Chen <chenl18@motorola.com>
Submit-Approved: Jira Key

--- a/qcom/Makefile
+++ b/qcom/Makefile
@@ -114,7 +114,9 @@ CROW_BASE_DTB += crow-eqe-base.dtb
 CROW_BOARDS += crow-eqe-evb1-overlay.dtbo \
                crow-eqe-evt1-overlay.dtbo \
                crow-eqe-dvt1-overlay.dtbo \
-               crow-eqe-evt1-jp-overlay.dtbo
+               crow-eqe-evb1-jp-overlay.dtbo \
+               crow-eqe-evt1-jp-overlay.dtbo \
+               crow-eqe-dvt1-jp-overlay.dtbo
 endif
 
 else
