--- a/display/crow-sde-display-eqe-evb-overlay.dts
+++ b/display/crow-sde-display-eqe-evb-overlay.dts
@@ -5,11 +5,11 @@
 /plugin/;
 
 #include "crow-sde-display-eqe-common.dtsi"
-
+#define EQE_RADIO_JP 3
 / {
 	model = "eqe";
 	compatible = "qcom,crow-idp", "qcom,crow", "qcom,idp", "mot,eqe";
 	qcom,msm-id = <608 0x10000>;
-	qcom,board-id = <0x41 0x9000>;
+	qcom,board-id = <0x41 0x9000>,<(EQE_RADIO_JP << 8 | 0x41) 0x9000>;
 
 };
