--- a/crow-audio-moto-eqe-evb.dts
+++ b/crow-audio-moto-eqe-evb.dts
@@ -6,11 +6,12 @@
 /plugin/;
 
 #include "crow-audio-moto-eqe-common.dtsi"
+#define EQE_RADIO_JP 3
  / {
 	model = "eqe";
 	compatible = "qcom,crow-idp", "qcom,crow", "qcom,idp", "mot,eqe";
 	qcom,msm-id = <608 0x10000>;
-	qcom,board-id = <0x41 0x9000>;
+	qcom,board-id = <0x41 0x9000>,<(EQE_RADIO_JP << 8 | 0x41) 0x9000>;
 };
 
 &qupv3_se1_i2c {
