arm/dts:eqe:sx937x:update reg config
eqe:
sx937x:
Update reg config(dvt2 03).

Change-Id: Ie7f3811f3507e431c46b898d8b3ebec937c6085e
Reviewed-on: https://gerrit.mot.com/2852184
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Yuchang Guo <guoyc1@lenovo.com>
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/qcom/crow-eqe-sensors-overlay.dtsi
+++ b/qcom/crow-eqe-sensors-overlay.dtsi
@@ -64,7 +64,7 @@
 		Semtech,reg-init = <
 			0x4004 0x74
 			0x8020 0x32
-			0x8028 0x49F
+			0x8028 0x89F
 			0x8034 0x86E
 			0x8040 0x86E
 			0x804C 0x89F
@@ -72,18 +72,18 @@
 			0x8064 0x86E
 			0x8070 0x86E
 			0x807C 0x85C
-			0x8030 0x924925
-			0x803C 0x92C924
-			0x8048 0x964924
-			0x8054 0xB24924
-			0x8060 0x92492C
-			0x806C 0x924964
-			0x8078 0x925924
-			0x8084 0x0
-			0x8098 0x5E27
-			0x80B8 0x3232
-			0x80D8 0x502C
-			0x80F8 0x2525
+			0x8030 0xFFFFFD
+			0x803C 0xFEFFFF
+			0x8048 0xF7FFFF
+			0x8054 0xBFFFFF
+			0x8060 0xFFFFEF
+			0x806C 0xFFFF7F
+			0x8078 0xFFDFFF
+			0x8084 0xFFFFFF
+			0x8098 0x864A
+			0x80B8 0x5F5F
+			0x80D8 0x542F
+			0x80F8 0x2626
 			0x8118 0xFF
 			0x8138 0xFF
 			0x8158 0xFF
@@ -100,7 +100,7 @@
 			0x818C 0x8000015
 			0x8190 0x8000016
 			0x8194 0x0
-			0x8090 0x54B45000
+			0x8090 0x54B45001
 			0x80B0 0x54B85000
 			0x80D0 0x54B45000
 			0x80F0 0x54B45000
