arm/dts:enable gpio toggle mosfet for PVT
Changes,
enable gpio toggle mosfet for PVT

Change-Id: If0391ebe2658910e07b441b278919714664fcb6f
Signed-off-by: Lei Chen <chenlei18@lenovo.com>
Reviewed-on: https://gerrit.mot.com/2853599
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Wei Xu <xuwei9@lenovo.com>
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/qcom/crow-eqe-dvt1-jp-overlay.dts
+++ b/qcom/crow-eqe-dvt1-jp-overlay.dts
@@ -26,5 +26,6 @@
 
 &qti_glink_charger {
 	mmi,usb-mosfet-supported;
-	/* mmi,mos-en-gpio = <&pm8550vs_d_gpios 4 0>; */
+	mmi,support-gpio-hwrev = <0xC000>;
+	mmi,mos-en-gpio = <&pm8550vs_d_gpios 4 0>;
 };
