arm/dts:eqe:sx937x:update reg config
eqe:
sx937x:
Update reg config(dvt2 04).

Change-Id: Ib65f46c992fcd1773b84625d361e1a1b8c5cf0f6
Reviewed-on: https://gerrit.mot.com/2862534
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Yuchang Guo <guoyc1@lenovo.com>
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/qcom/crow-eqe-sensors-overlay.dtsi
+++ b/qcom/crow-eqe-sensors-overlay.dtsi
@@ -72,13 +72,13 @@
 			0x8064 0x86E
 			0x8070 0x86E
 			0x807C 0x85C
-			0x8030 0xFFFFFD
-			0x803C 0xFEFFFF
-			0x8048 0xF7FFFF
-			0x8054 0xBFFFFF
-			0x8060 0xFFFFEF
-			0x806C 0xFFFF7F
-			0x8078 0xFFDFFF
+			0x8030 0xFFF9FD
+			0x803C 0xFEF9FF
+			0x8048 0xF7F9FF
+			0x8054 0xBFF9FF
+			0x8060 0xFFF9EF
+			0x806C 0xFFF97F
+			0x8078 0xFFD9FF
 			0x8084 0xFFFFFF
 			0x8098 0x864A
 			0x80B8 0x5F5F
