display: macan: enable dsc 10 bits color depth
enable dsc 10 bits color depth for
macan

Change-Id: If576e396ba6c2ae164a2be13accc906da1c5cc08
Signed-off-by: tanhua1 <tanhua1@motorola.com>
Reviewed-on: https://gerrit.mot.com/2866384
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Shanshan Dai <daiss1@motorola.com>
Reviewed-by: Dezhen Hou <houdz1@motorola.com>
Submit-Approved: Jira Key

--- a/display/crow-sde-display-eqe-common.dtsi
+++ b/display/crow-sde-display-eqe-common.dtsi
@@ -188,7 +188,7 @@
        qcom,mdss-dsi-display-timings {
                timing@0 {
                        //qcom,mdss-dsi-panel-clockrate = <1095000000>;
-                       qcom,mdss-dsi-panel-phy-timings = [00 24 0A 0A 1A 25 09
+                       qcom,mdss-dsi-panel-phy-timings = [00 24 0A 0A 1A 24 0A
                                0A 09 02 04 00 1E 0F];
                        qcom,display-topology = <2 2 1>;
                        qcom,default-topology-index = <0>;
@@ -239,7 +239,7 @@
        qcom,mdss-dsi-display-timings {
                timing@0 {
                        //qcom,mdss-dsi-panel-clockrate = <1095000000>;
-                       qcom,mdss-dsi-panel-phy-timings = [00 24 0A 0A 1A 25 09
+                       qcom,mdss-dsi-panel-phy-timings = [00 24 0A 0A 1A 24 0A
                                0A 09 02 04 00 1E 0F];
                        qcom,display-topology = <2 2 1>;
                        qcom,default-topology-index = <0>;
@@ -290,7 +290,7 @@
        qcom,mdss-dsi-display-timings {
                timing@0 {
                        //qcom,mdss-dsi-panel-clockrate = <1095000000>;
-                       qcom,mdss-dsi-panel-phy-timings = [00 24 0A 0A 1A 25 09
+                       qcom,mdss-dsi-panel-phy-timings = [00 24 0A 0A 1A 24 0A
                                0A 09 02 04 00 1E 0F];
                        qcom,display-topology = <2 2 1>;
                        qcom,default-topology-index = <0>;
@@ -341,7 +341,7 @@
        qcom,mdss-dsi-display-timings {
                timing@0 {
                        //qcom,mdss-dsi-panel-clockrate = <1095000000>;
-                       qcom,mdss-dsi-panel-phy-timings = [00 24 0A 0A 1A 25 09
+                       qcom,mdss-dsi-panel-phy-timings = [00 24 0A 0A 1A 24 0A
                                0A 09 02 04 00 1E 0F];
                        qcom,display-topology = <2 2 1>;
                        qcom,default-topology-index = <0>;
@@ -392,8 +392,8 @@
        qcom,mdss-dsi-display-timings {
                timing@0 {
                        //qcom,mdss-dsi-panel-clockrate = <1095000000>;
-                       qcom,mdss-dsi-panel-phy-timings = [00 23 09 09 1A 24 09
-                               09 09 02 04 00 1D 0E];
+                       qcom,mdss-dsi-panel-phy-timings = [00 24 0A 0A 1A 24 0A
+                               0A 09 02 04 00 1E 0F];
                        qcom,display-topology = <2 2 1>;
                        qcom,default-topology-index = <0>;
                };
@@ -443,8 +443,8 @@
        qcom,mdss-dsi-display-timings {
                timing@0 {
                        //qcom,mdss-dsi-panel-clockrate = <1095000000>;
-                       qcom,mdss-dsi-panel-phy-timings = [00 23 09 09 1A 24 09
-                               09 09 02 04 00 1D 0E];
+                       qcom,mdss-dsi-panel-phy-timings = [00 24 0A 0A 1A 24 0A
+                               0A 09 02 04 00 1E 0F];
                        qcom,display-topology = <2 2 1>;
                        qcom,default-topology-index = <0>;
                };
