--- a/display/crow-sde-display-eqe-common.dtsi
+++ b/display/crow-sde-display-eqe-common.dtsi
@@ -12,6 +12,7 @@
 #include "dsi-panel-mot-csot-vtdr6126-c-667-1220x2712-dsc-video-144hz-common-v3.dtsi"
 #include "dsi-panel-mot-csot-vtdr6126-c-667-1220x2712-dsc-video-144hz-common-lhbm-v3.dtsi"
 #include "dsi-panel-mot-tm-nt37706-c-667-1220x2712-dsc-video-144hz-common.dtsi"
+#include "dsi-panel-mot-tm-nt37706-c-667-1220x2712-dsc-video-144hz-common-v1.dtsi"
 #include "crow-eqe-touchscreen-overlay.dtsi"
 
 &soc {
@@ -354,8 +355,59 @@
        qcom,mdss-dsi-display-timings {
                timing@0 {
                        //qcom,mdss-dsi-panel-clockrate = <1095000000>;
-                       qcom,mdss-dsi-panel-phy-timings = [00 24 0A 0A 1A 25 09
-                               0A 09 02 04 00 1E 0F];
+                       qcom,mdss-dsi-panel-phy-timings = [00 23 09 09 1A 24 09
+                               09 09 02 04 00 1D 0E];
+                       qcom,display-topology = <2 2 1>;
+                       qcom,default-topology-index = <0>;
+               };
+       };
+};
+
+&mot_tm_nt37706_c_667_1220p_dsc_vid_144hz_v1 {
+       qcom,dsi-select-clocks = "pll_byte_clk0", "pll_dsi_clk0";
+
+       qcom,dsi-supported-dfps-list = <144 120 90 60>;
+       qcom,mdss-dsi-pan-enable-dynamic-fps;
+       qcom,mdss-dsi-pan-fps-update = "dfps_immediate_porch_mode_vfp";
+       qcom,mdss-dsi-pan-dfps-send-command;
+
+       //qcom,dsi-dyn-clk-enable;
+
+       qcom,panel-supply-entries = <&dsi_panel_pwr_supply_eqe>;
+       qcom,mdss-dsi-no-panel-on-read-support;
+       qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_dcs";
+       qcom,mdss-dsi-bl-min-level = <420>;//
+       qcom,mdss-dsi-bl-max-level = <16128>;
+       qcom,mdss-dsi-bl-default-level = <8064>;
+       qcom,mdss-brightness-max-level = <16128>;
+       qcom,platform-reset-gpio = <&tlmm 29 0>;
+       qcom,bl-dsc-cmd-state = "dsi_hs_mode";
+       qcom,mdss-dsi-bl-inverted-dbv;
+       qcom,mdss-dsi-bl-is-exponent;
+       qcom,mdss-dsi-bl-double-write;
+
+       qcom,mdss-dsi-panel-hdr-enabled;//
+       qcom,mdss-dsi-panel-hdr-color-primaries = <14950 15750 34000
+               16000 13000 35500 7000 2500>;
+       qcom,mdss-dsi-panel-peak-brightness = <15000000>;
+       qcom,mdss-dsi-panel-blackness-level = <1>;
+
+       qcom,mdss-dsi-panel-status-check-mode = "reg_read";
+       qcom,mdss-dsi-panel-status-command = [06 01 00 01 00 00 01 66];
+       qcom,mdss-dsi-panel-status-command-state = "dsi_lp_mode";
+       qcom,mdss-dsi-panel-status-value = <0 0 0>;
+       qcom,mdss-dsi-panel-status-read-length = <3>;
+       //qcom,esd-check-enabled;
+
+       qcom,cellid-read-enabled;//
+       qcom,mdss-dsi-panel-cellid-read-length = <23>;
+       qcom,mdss-dsi-panel-cellid-command = [06 01 00 01 00 00 01 AC];
+
+       qcom,mdss-dsi-display-timings {
+               timing@0 {
+                       //qcom,mdss-dsi-panel-clockrate = <1095000000>;
+                       qcom,mdss-dsi-panel-phy-timings = [00 23 09 09 1A 24 09
+                               09 09 02 04 00 1D 0E];
                        qcom,display-topology = <2 2 1>;
                        qcom,default-topology-index = <0>;
                };
@@ -387,7 +439,8 @@
                  &mot_csot_vtdr6126_c_667_1220p_dsc_vid_144hz_v2
                  &mot_csot_vtdr6126_c_667_1220p_dsc_vid_144hz_v3
                  &mot_csot_vtdr6126_c_667_1220p_dsc_vid_144hz
-                 &mot_tm_nt37706_c_667_1220p_dsc_vid_144hz>;
+                 &mot_tm_nt37706_c_667_1220p_dsc_vid_144hz
+                 &mot_tm_nt37706_c_667_1220p_dsc_vid_144hz_v1>;
     };
 };
 
