arm/dts:poll conn-therm every 1s for softbank
After the usb critial temp triggered, the conn-therm should
be polling every 1s. Step_wise policy must has a cooler to
ensure the polling-delay-passive can workable.

Change-Id: I33bc92f9ccef0749634c6b04e495d659500720bd
Signed-off-by: Lei Chen <chenlei18@lenovo.com>
Reviewed-on: https://gerrit.mot.com/2874492
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Wei Xu <xuwei9@lenovo.com>
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/qcom/crow-eqe-dvt1-jp-overlay.dts
+++ b/qcom/crow-eqe-dvt1-jp-overlay.dts
@@ -29,3 +29,32 @@
 	mmi,support-gpio-hwrev = <0xC000>;
 	mmi,mos-en-gpio = <&pm8550vs_d_gpios 4 0>;
 };
+
+&soc {
+	qcom,userspace-cdev {
+		usb_usr_cdev: usb-usr-cdev {
+			qcom,max-level = <2>;
+			#cooling-cells = <2>;
+		};
+	};
+};
+
+&thermal_zones {
+	conn-therm {
+		polling-delay-passive = <1000>;
+		trips {
+			active_config0: active-config0 {
+				temperature = <75000>;
+				hysteresis = <5000>;
+				type = "passive";
+			};
+		};
+                cooling-maps {
+                       usb_cdev0 {
+                               trip = <&active_config0>;
+                               cooling-device = <&usb_usr_cdev 1 1>;
+                       };
+                };
+
+	};
+};
