Canyon: Add new battery serial number
Canyon:
1. Battery PN change: 1st:SB18D58448-->SB18E04368
		      2st:SB18D58447-->SB18E05257
2. In order to adapt the charging parameters
corresponding to different battery PN. So add
battery PN SB18E04368 and SB18E05257 to the dtsi.

Change-Id: Ie661f3ab95fc5e13940905164d3fbfbd2cb22e55
Signed-off-by: Changqing Jia <jiacq4@motorola.com>
Reviewed-on: https://gerrit.mot.com/2886715
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Wentao Xu <xuwt2@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/qcom/kalama-rtwo-charger-overlay.dtsi
+++ b/qcom/kalama-rtwo-charger-overlay.dtsi
@@ -5,7 +5,7 @@
 };
 
 &qti_glink_charger {
-	profile-ids-map = "107000", "SB18D58448", "38000", "SB18D58447";
+	profile-ids-map = "107000", "SB18D58448", "38000", "SB18D58447","107000", "SB18E04368", "38000", "SB18EO5257";
 };
 
 &battery_charger {
