--- a/qcom/crow-eqe-products-common-overlay.dtsi
+++ b/qcom/crow-eqe-products-common-overlay.dtsi
@@ -140,6 +140,10 @@
 		<0xB 0x50
 		/* IUSB2 */
 		 0xB 0x51
+		/* hsdisc */
+		 0x3 0x53
+		/* squelch */
+		 0x1 0x54
 		/* EQU */
 		 0x1 0x56
 		/*PREEM*/
@@ -152,6 +156,10 @@
 		<0xB 0x50
 		/* IUSB2 */
 		 0xB 0x51
+		/* hsdisc */
+		 0x3 0x53
+		/* squelch */
+		 0x1 0x54
 		/* EQU */
 		 0x1 0x56
 		/*PREEM*/
