--- a/qcom/crow-eqe-products-common-overlay.dtsi
+++ b/qcom/crow-eqe-products-common-overlay.dtsi
@@ -157,6 +157,34 @@
 		/*PREEM*/
 		 0x7 0x57
 		>;
+	qcom,param-override-seq-jp =
+		/* <value reg_offset> */
+		/* Adjust HS trasmit amplitude */
+		/* USB2 crossover */
+		<0xB 0x50
+		/* IUSB2 */
+		 0xB 0x51
+		/* EQU */
+		 0x1 0x56
+		/*PREEM*/
+		 0x7 0x57
+		>;
+	qcom,host-param-override-seq-jp =
+		/* <value reg_offset> */
+		/* Adjust HS trasmit amplitude */
+		/* USB2 crossover */
+		<0xB 0x50
+		/* IUSB2 */
+		 0xB 0x51
+		/* hsdisc */
+		 0x3 0x53
+		/* squelch */
+		 0x1 0x54
+		/* EQU */
+		 0x1 0x56
+		/*PREEM*/
+		 0x7 0x57
+		>;
 };
 
 &soc {
