--- a/qcom/crow-eqe-products-common-overlay.dtsi
+++ b/qcom/crow-eqe-products-common-overlay.dtsi
@@ -164,6 +164,10 @@
 		<0xB 0x50
 		/* IUSB2 */
 		 0xB 0x51
+		/* hsdisc */
+		 0x1 0x53
+		/* squelch */
+		 0x2 0x54
 		/* EQU */
 		 0x1 0x56
 		/*PREEM*/
