--- a/qcom/crow-eqe-dvt1-jp-overlay.dts
+++ b/qcom/crow-eqe-dvt1-jp-overlay.dts
@@ -62,3 +62,8 @@
 &battery_charger {
 	qcom,thermal-mitigation = <22000000 20000000 18000000 16000000 14000000 12000000 10000000 9000000 6000000 5000000 4000000 3000000 2000000 500000 200000>;
 };
+
+&mmi_charger {
+	mmi,upper-limit-capacity = <78>;
+	mmi,lower-limit-capacity = <73>;
+};
